# 2d-kuramoto-sivashinsky

./: .directory  .gitignore  CMakeLists.txt  Makefile  run.sh
data/: data.txt  energy copy.txt  energy.txt  energy2.txt  energy_return.txt  freq.txt  freq_slice.txt  input.txt  ks2D_py-no mean.txt  ks2D_py-with mean.txt  sol_aux.txt  solution.txt  solution_slice.txt
docs/: README.md  input_README.txt  what-to-do.txt
docs/2D Kuramoto-Sivashinsky equation/: .directory
include/: LinearAlgebra.hpp  energy.hpp  fft.hpp  field.hpp  misc.hpp  scheme_fd.hpp  setup.hpp  vector.hpp
latex/: bibliography.sty  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.tex  main.toc  references.bib
latex/images/: arrow.aux  arrow.fdb_latexmk  arrow.fls  arrow.tex  nu1-nu2.fdb_latexmk  nu1-nu2.fls  nu1-nu2.tex  nu1-nu2_presentation.fdb_latexmk  nu1-nu2_presentation.fls  nu1-nu2_presentation.tex  nu1=nu2.fdb_latexmk  nu1=nu2.fls  nu1=nu2.tex  phase_space.fdb_latexmk  phase_space.fls  phase_space.tex
others/: LinearAlgebra.hpp  Makefile  computations.mw  field.hpp  heat.ipynb  ks2D.py  main copy.cpp  main_old_tries_fftw.cpp  main_without_fftw.cpp  matplotlibcpp.h  plot.ipynb  plot.py  prova.ipynb  prova.py  prova_plot.cpp  rk78.h  scheme_df.cpp  vect_prova.cpp  vector.cpp  vector.hpp
others/Parallelling/: a.out  (+1 more)
src/: animation.py  energy.cpp  fft.cpp  find_period.py  find_period_burst.py  main.cpp  misc.cpp  plot.ipynb  plot.py  plot_energy.py  plot_freq.py  plot_growth.py  plot_solution.py  prova.py  read_data.py  rk78.c  scheme_df.cpp  setup.cpp  vector.cpp
(+27 files in other folders)
